--- a/helm_charts/mdcore/templates/ingress-template.yml
+++ b/helm_charts/mdcore/templates/ingress-template.yml
@@ -1,5 +1,4 @@
 {{ if .Values.core_ingress.enabled }}
-{{ if eq .Values.environment "generic" }}
 ---
 kind: Ingress
 apiVersion: networking.k8s.io/v1
@@ -10,7 +9,7 @@ metadata:
     ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: {{ .Values.core_ingress.host | replace "<APP_NAME>" .Values.app_name }} 
+  - host: {{ .Values.core_ingress.host | replace "<APP_NAMESPACE>" .Release.Namespace }}
     http:
       paths:
         - path: /
@@ -20,21 +19,4 @@ spec:
               name: {{ .Values.core_ingress.service }}
               port:
                 number: {{ .Values.core_ingress.port }}
-{{ end }}
-
-{{ if .Values.mdcore_target_group_arn }}
----
-apiVersion: elbv2.k8s.aws/v1beta1
-kind: TargetGroupBinding
-metadata:
-  name: {{ printf "%s-mdcore-tgb" .Values.app_name }}
-  annotations:
-    "helm.sh/hook": "post-install"
-    "helm.sh/hook-weight": "1"
-spec:
-  serviceRef:
-    name: {{ .Values.core_ingress.service }}
-    port: {{ .Values.core_ingress.port }}
-  targetGroupARN: {{ .Values.mdcore_target_group_arn }}
-{{ end }}
 {{ end }}
