--- a/helm_charts/mdss-azure-aks-values.yml
+++ b/helm_charts/mdss-azure-aks-values.yml
@@ -17,7 +17,7 @@ mdss_components:
 
 # # Ingress setting for mdss
 # mdss_ingress:
-#   host: <APP_NAME>-mdss.azure
+#   host: <APP_NAMESPACE>-mdss.azure
 #   class: addon-http-application-routing
 
 # Docker repo to use, this should be changed when using private images (this string will be prepended to the image name)
