--- a/helm_charts/mdss/Chart.yaml
+++ b/helm_charts/mdss/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: MetaDefender_for_Secure_Storage
+name: metadefender_for_secure_storage
 description: This is a Helm chart for deploying MetaDefender for Secure Storage (https://www.opswat.com/products/metadefender/metadefender-for-secure-storage) in a Kubernetes cluster
 
 long_description: |
@@ -10,22 +10,23 @@ long_description: |
   In addition to the chart, we also provide a number of values files for specific scenarios:
   - mdss-aws-eks-values.yml - for deploying in an AWS environment using Amazon EKS
   - mdss-azure-aks-values.yml - for deploying in an Azure environment using AKS
-  - mdss-generic-values.yml - for deploying in a standalone cluster
 
   ## Installation
   
   ### From source
-  MD Core can be installed directly from the source code, here's an example using the generic values:
+  MDSS can be installed directly from the source code, here's an example using generic values:
   ```console
   git clone https://github.com/OPSWAT/metadefender-k8s.git metadefender
   cd metadefender/helm_carts
-  helm install my_mdss ./mdss -f mdss-generic-values.yml
+  helm install my_mdss ./mdss
   ```
 
-  ### From the latest release
-  The installation can also be done using the latest release from github:
+  ### From the GitHub helm repo
+  The installation can also be done using the helm repo which is updated on each release:
   ```console
-  helm install my_mdss <MDSS_RELEASE_URL>.tgz -f mdss-generic-values.yml
+  helm repo add mdk8s https://opswat.github.io/metadefender-k8s/
+  helm repo update mdk8s
+  helm install my_mdss mdk8s/metadefender_for_secure_storage
   ```
 
   ## Operational Notes
@@ -36,9 +37,3 @@ long_description: |
 type: application
 
 version: 3.0.0
-
-dependencies:
-- name: aws-load-balancer-controller
-  condition: aws-load-balancer-controller.enabled
-  version: 1.4.2
-  repository: https://aws.github.io/eks-charts
