--- a/helm_charts/mdss/templates/services-template.yml
+++ b/helm_charts/mdss/templates/services-template.yml
@@ -1,6 +1,7 @@
 # Create a service for each component in MDSS it has exposed ports
 {{ range $component_name, $component := .Values.mdss_components }}
 {{ if $component.ports }}
+{{ if and (not $.Values.deploy_with_mdss_db) $component.is_db }}
 ---
 apiVersion: v1
 kind: Service
@@ -27,6 +28,8 @@ spec:
       app: {{ $component.name | quote }}
 status:
   loadBalancer: {}
+{{ end }}
+
 {{ end }}
 
 {{ end }}
