--- a/helm_charts/mdcore-gcloud-sidecarproxy-values.yml
+++ b/helm_charts/mdcore-gcloud-sidecarproxy-values.yml
@@ -58,7 +58,7 @@ core_components:
     initContainers: null
     sidecars:
       - name: activation-manager
-        image: alpine
+        image: opswat/md-activation-manager
         envFrom:
           - configMapRef:
               name: mdcore-env
@@ -73,29 +73,8 @@ core_components:
               secretKeyRef:
                 name: mdcore-license-key
                 key: value
-        command: ["/bin/sh", "-c"]
-        args:                                             # Test
-          - | 
-            apk add curl jq
-            stop() {
-              echo 'Deactivating using the MD Core API'
-              curl -H "apikey: $APIKEY" -X POST "https://localhost:$REST_PORT/admin/license/deactivation"
-              echo 'Deactivating using activation server API'
-              curl -X GET "https://$ACTIVATION_SERVER/deactivation?key=$LICENSE_KEY&deployment=$DEPLOYMENT"
-              exit 0
-            }
-            trap stop SIGTERM SIGINT SIGQUIT
-
-            until [ -n $DEPLOYMENT ] && [ $DEPLOYMENT != null ]; do
-                echo 'Checking...'
-                export DEPLOYMENT=$(curl --silent -H "apikey: $APIKEY" "http://localhost:$REST_PORT/admin/license" | jq -r ".deployment")
-                echo "Deployment ID: $DEPLOYMENT"
-                sleep 1
-            done
-            echo "Waiting for termination signal..."
-            while true; do sleep 1; done
-            echo "MD Core pod finished, exiting"
-            exit 0
+          - name: MDCORE_BASE_URL
+            value: http://localhost
       - name: cloud-sql-proxy
         image: gcr.io/cloudsql-docker/gce-proxy:latest
         command:
