--- a/helm_charts/mdcore/templates/deployments-template.yml
+++ b/helm_charts/mdcore/templates/deployments-template.yml
@@ -28,6 +28,10 @@ spec:
         - envFrom:
             - configMapRef:
                 name: mdcore-env
+            {{- if $.Values.env }}
+            - configMapRef:
+                name: {{ printf "%s-config" $.Release.Name }}
+            {{- end }}
           {{ if $component.custom_repo -}}
           image: {{ printf "%s/%s:%s" $.Values.core_docker_repo $component.image $.Values.BRANCH | quote }}
           {{- else -}}
@@ -99,7 +103,7 @@ spec:
       imagePullSecrets:
         {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
       {{- end }}
-      {{- if (or $component.mountConfig $component.tls.enabled $component.persistentDir)}}
+      {{- if (or $component.mountConfig $component.tls.enabled $component.persistentDir $component.extraVolumes)}}
       volumes:
         {{- if $component.mountConfig }}
         - name: {{ $component.mountConfig.configName }}
@@ -118,7 +122,7 @@ spec:
         {{- if eq $.Values.storage_provisioner "hostPath" }}
         - name: {{ $component.name }}
           hostPath:
-            path: {{ printf "/%s/%s" $.Values.hostPathPrefix $component.name }}
+            path: {{ printf "/%s/%s" ( $.Values.hostPathPrefix | replace "<APP_NAMESPACE>" $.Release.Namespace) $component.name }}
             type: DirectoryOrCreate
         {{ else }}
         - name: {{ $component.name }}
@@ -126,6 +130,9 @@ spec:
             claimName: {{ printf "%s-pvc" $.Values.storage_name }}
         {{ end }}
         {{ end }}
+        {{- if $component.extraVolumes }}
+          {{- toYaml $component.extraVolumes | nindent 8 }}
+        {{- end }}
       {{- end }}
 {{ end }}
 {{ end }}
