--- a/helm_charts/mdcore/values.yaml
+++ b/helm_charts/mdcore/values.yaml
@@ -56,7 +56,7 @@ persistance_enabled: true
 storage_provisioner: hostPath
 storage_name: hostPath
 storage_node: minikube
-hostPathPrefix: mdcore-storage      # If `deploy_with_core_db` is set to true, this is the absolute path on the node where to keep the database filesystem for persistance
+hostPathPrefix: mdcore-storage-<APP_NAMESPACE>      # This is the absolute path on the node where to keep the database filesystem for persistance, <APP_NAMESPACE> is replaced with the current deployment namespace
 
 # Ingress setting for md core (md core setting are ignored if deploy_with_core is false)
 core_ingress:
@@ -73,6 +73,9 @@ core_ingress:
 # Docker repo to use, this should be changed when using private images (this string will be prepended to the image name)
 # If a component has "custom_repo: true" then the image name will be formated as "{docker_repo/}image_name{:BRANCH}" otherwise it will remain unaltered
 core_docker_repo: opswat
+
+env:                                                            # Set additional environment variables for the MD Core container
+  CORE_CONF_JSON: '\{\"global/restaddress\": \"0.0.0.0\"\}'     # This sets MD Core to listen only on ipv4 addresses by default, remove this setting to listen also on ipv6 
 
 core_components:
   postgres-core:
@@ -170,7 +173,7 @@ core_components:
         maxSurge: 0
     sidecars:                                           # Configuration for the activation-manager sidecar
       - name: activation-manager
-        image: alpine
+        image: opswat/md-activation-manager
         envFrom:
           - configMapRef:
               name: mdcore-env
@@ -185,29 +188,8 @@ core_components:
               secretKeyRef:
                 name: mdcore-license-key
                 key: value
-        command: ["/bin/sh", "-c"]
-        args:                                             # Test
-          - | 
-            apk add curl jq
-            stop() {
-              echo 'Deactivating using the MD Core API'
-              curl -H "apikey: $APIKEY" -X POST "https://localhost:$REST_PORT/admin/license/deactivation"
-              echo 'Deactivating using activation server API'
-              curl -X GET "https://$ACTIVATION_SERVER/deactivation?key=$LICENSE_KEY&deployment=$DEPLOYMENT"
-              exit 0
-            }
-            trap stop SIGTERM SIGINT SIGQUIT
-
-            until [ -n $DEPLOYMENT ] && [ $DEPLOYMENT != null ]; do
-                echo 'Checking...'
-                export DEPLOYMENT=$(curl --silent -H "apikey: $APIKEY" "http://localhost:$REST_PORT/admin/license" | jq -r ".deployment")
-                echo "Deployment ID: $DEPLOYMENT"
-                sleep 1
-            done
-            echo "Waiting for termination signal..."
-            while true; do sleep 1; done
-            echo "MD Core pod finished, exiting"
-            exit 0
+          - name: MDCORE_BASE_URL
+            value: http://localhost
     initContainers:
       - name: check-db-ready
         image: postgres
