--- a/helm_charts/mdcore/Chart.yaml
+++ b/helm_charts/mdcore/Chart.yaml
@@ -4,7 +4,7 @@ description: This is a Helm chart for deploying MetaDefender Core (https://www.o
 
 long_description: |
   This chart can deploy the following depending on the provided values:
-  - One or mode MD Core instances 
+  - One or more MD Core instances 
   - A PostgreSQL database instance pre-configured to be used by MD Core
 
   In addition to the chart, we also provide a number of values files for specific scenarios:
